# nadi_core

./: Cargo.toml  README.md  build.rs
src/: attributes.rs  attrs.rs  ffi.rs  functions.rs  internal.rs  lib.rs  network.rs  node.rs  plugins.rs  prelude.rs  table.rs  tasks.rs  timeseries.rs
src/ffi/: context.rs  network.rs  node.rs  timeseries.rs
src/functions/: attrs.rs  attrs2.rs  command.rs  connections.rs  debug.rs  render-old.rs  render.rs  table.rs  timeseries.rs
src/graphics/: color.rs  node.rs
src/internal/: attrs.rs  attrs2.rs  command.rs  connections.rs  core.rs  debug.rs  logic.rs  regex.rs  render.rs  series.rs  table.rs  timeseries.rs  visuals.rs
src/parser/: attrs.rs  functions.rs  mod.rs  network.rs  table.rs  tasks.rs  tokenizer.rs
