[package]
name = "nadi_core"
version = "0.3.1"
edition = "2021"
description = "Core library for Nadi systems, for use by plugins"
repository = "https://github.com/Nadi-System/nadi_core"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["river", "timeseries", "water-system"]
categories = ["data-structures", "science", "science::geo", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.3"
anyhow = "1.0.86"
cairo-rs = { version = "0.20.1", features = ["pdf", "png", "svg"] }
nom = "7.1.3"
string-template-plus = "0.4.3"
nadi_plugin = {version = "0.3.0", path="../nadi_plugin"}
use = "0.0.1-pre.0"
colored = "2.1.0"
chrono = "0.4.38"
subprocess = "0.2.9"
number_range = "0.3.2"

[dev-dependencies]
rstest = "0.22.0"
